# bilinear

./: .gitmodules  CMakeLists.txt  README  README.md  bilinear.cpp  gpu.h  makefile
cmake/: FindOpenCL.cmake
coalescing/: bilinear.cu
memory/: bilinear.cpp  bilinear.cu  makefile
no_fp64/: EasyBMP  bilinear.cpp  bilinear.cu
opencl/: EasyBMP  bilinear.cl  bilinear.cpp  makefile
unoptimized/: bilinear.cu
